s-m-cluster/students-app/kubernetes/student-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: students-app
  labels:
    name: students-app
spec:
  ports:
     #- nodePort: 32000
     - port: 8080
       targetPort: 8080
       protocol: TCP
  selector:
    app: students-app
 # type: NodePort
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: students-app
spec:
  selector:
    matchLabels:
      app: students-app
  replicas: 3
  template:
    metadata:
      labels:
        app: students-app
    spec:
      containers:
        - name: students-app
          image: ajaypagare/students-app:1.0
          ports:
            - containerPort: 8080
          env:   # Setting Enviornmental Variables
            - name: DB_HOST   # Setting Database host address from configMap
              valueFrom:
                configMapKeyRef:
                  name: db-config  # name of configMap
                  key: host
            - name: DB_NAME  # Setting Database name from configMap
              valueFrom:
                configMapKeyRef:
                  name: db-config
                  key: name
            - name: DB_USERNAME  # Setting Database username from Secret
              valueFrom:
                secretKeyRef:
                  name: db-user # Secret Name
                  key: username
            - name: DB_PASSWORD # Setting Database password from Secret
              valueFrom:
                secretKeyRef:
                  name: db-user
                  key: password
