s-m-cluster/students-app/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: students-app-ingress
  namespace: default
 # annotations:
   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: studentapp-example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: students-app
                port:
                  number: 8080
